opam-version: "1.2.2"
name: "tt"
version: "0.0"
maintainer: "jonsterling@users.noreply.github.com"
authors: ["Jon Sterling"]
homepage: "https://github.com/jonsterling/tt"
bug-reports: "https://github.com/jonsterling/tt/issues"
dev-repo: "https://github.com/jonsterling/tt.git"
license: "Apache-2.0"
depends: [
  "base" {= "v0.10.0"}
  "cmdliner" {= "1.0.2"}
  "fmt" {= "0.8.5"}
  "jbuilder" {build & = "1.0+beta17"}
  "lwt" {= "3.2.1"}
  "menhir" {>= "20171013"}
  "ppx_expect" {= "v0.10.0"}
  "ppx_hash" {= "v0.10.0"}
  "ppx_jane" {= "v0.10.0"}
  "ppx_metaquot" {= "v0.10.0"}
  "ppx_traverse" {= "v0.10.0"}
  "topkg" {= "0.9.1"}
]
build: [
  ["make"]
]
